<resources>
    <string name="app_name" translatable="false">FiveH</string>

    <string name="facebook_app_id" translatable="false">767730763567388</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb767730763567388</string>

    <string name="twitter_consumer_key" translatable="false">4Os4L1k1V2mwEEfvqvk8aeWGO</string>
    <string name="twitter_consumer_secret" translatable="false">kc1UVp7Rc4E5OLDIpwq95D8WUGcLezv5ux2dOoS5CQxMWYjDcq</string>

    <string name="insta_client_id" translatable="false">0ef253d29c5147bd8e3c02f3cfa87f11</string>
    <string name="insta_client_secret" translatable="false">f2c8865bfe844258a333939b1dfe3187</string>
    <string name="insta_client_callbackuri" translatable="false">http://localhost</string>
    sha1 is not used in code, but set here just as a NOTE..
    <string name="sha1_debug" translatable="false">5F:21:EA:75:14:53:C3:0D:28:8B:2A:24:26:F2:2D:8D:34:7E:5D:10</string>

    <string name="debugtext">this text is used for debugging purposes</string>

    <string name="my_profile">Profile</string>
    <string name="my_ads_or_my_money">My Ads</string>
    <string name="my_money">My Account</string>
    <string name="yellow_pages">Companies</string>
    <string name="app_settings">App Settings</string>
    <string name="about">About</string>
    <string name="logout">SignOut</string>
    <string name="login">SignIn</string>
    <string name="greed">Advertiser</string>
    <string name="advertiser">Client</string>
    <string name="search_hint">Search in Companies</string>
    <string name="temp_msg">this activity holds money info</string>

    <string-array name="options_when_signup">
        <item>Normal</item>
        <item>Silver</item>
        <item>Gold</item>
    </string-array>

    <string-array name="options_when_create_ad">
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Instagram</item>
        <item>LinkedIn</item>
        <item>Our website</item>
    </string-array>


    <string-array name="options_when_choose_participation_type">
        <item>Silver</item>
        <item>Golden</item>
        <item>Diamond</item>
    </string-array>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="explain_service">In order to take advantage of our service you have to have a user account to keep tracking your progress and points</string>
    <string name="account_type_radio_button">account type</string>
    <string name="advertiser_radio_button">advertiser</string>
    <string name="user_radio_button">user</string>
    <string name="login_btn">Login</string>
    <string name="no_account_yet_create_one_tv">No account yet? Create one</string>
    <string name="re_enter_password_et">re-enter password</string>
    <string name="create_account_btn">Create account</string>
    <string name="already_a_member_login_tv">Already a member? Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="or_text_in_circle">OR</string>
    <string name="AD_TITLE_FIXED">AD description</string>
    <string name="title_activity_navigation" translatable="false">Navigation</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="my_accounts">My accounts</string>
    <string name="my_points">Points</string>
    <string name="app_preferences">Preferences</string>
    <string name="log_out">Log out</string>
    <string name="debug_username">Muhammad Sulaiman</string>
    <string name="golden_user">golden user</string>
    <string name="silver_user">silver user</string>
    <string name="diamond_user">diamond user</string>
    <string name="ad_iamge">Avertise image</string>
    <string name="title_activity_test_git_hubcode" translatable="false">TestGitHubcode</string>


    <string name="read_more">show more</string>
    <string name="read_less">show less</string>
    <string name="flower_name_placeholder" translatable="false">show less</string>

    <string name="very_long_text" translatable="false">LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng LONG long LoNg LOng textttttt</string>
    <string name="ad_tesxt_placeholder">Advertisement text</string>
    <string name="authing_mag">Authenticating…</string>
    <string name="debug_usertype">golden user</string>
    <string name="profile_name_label">Name</string>
    <string name="save">save</string>
    <string name="profile_name">Name</string>
    <string name="profile_age_label">Age</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="profile_spinner_promt">select gender</string>
    <string name="profile_address_label">Address</string>
    <string name="profile_gender_label">Gender</string>
    <string name="profile_emails_label">Email</string>
    <string name="profile_phones_label">Phone</string>
    <string name="debug_ad_text">Advertisement text: different activities in life</string>
    <string name="delete_label">delete</string>
    <string name="stats_label">stats</string>
    <string name="preview_label">preview</string>
    <string name="active_accounts_in_my_accounts">These accounts have been added previously</string>
    <string name="advertisment_type">Advertisment type</string>
    <string name="choose_advertisment_type">choose advertisment type</string>
    <string name="advertisement_bundle">Advertisement bundle</string>
    <string name="choose_advertisement_bundle">choose advertisement bundle</string>
    <string name="advertisement_text">Advertisement text</string>
    <string name="explain_more">Explain more</string>
    <string name="your_points">your points</string>
    <string name="debug_2500_points" translatable="false">2500 points</string>
    <string name="increase_your_balance_btn">increase your balance</string>
    <string name="explain_increase_your_points">according to your bundle, this service lets you increase your balance when you interact with each Ad you see. notice that you cann\'t take advantage of this feature until you got 2500 points in your behalf.</string>
    <string name="start_over_btn">start over</string>
    <string name="participate_btn">participate</string>
    <string name="convert_your_points_to_money_label">convert your points to money</string>
    <string name="donate_to_charities">donate to charities</string>
    <string name="about_msg">FiveH application</string>
    <string name="my_archive">My Archive</string>
    <string name="participation_type">participation type</string>
    <string name="choose_participation_type">choose participation type</string>
    <string name="_2500_points" translatable="false">2500\npoints</string>
    <string name="debug_participation_type_free">participation type Free</string>
    <string name="debug_explain_bundle" translatable="false">Your balance will double twice for each click on an AD.</string>
    <string name="debug_explain_bundle_2" translatable="false">bundle cost = 500 points</string>
    <string name="_2018_2019_fiveh_app">2018-2019 FiveH App\nAll rights reserved</string>
    <string name="fiveh_for_ads">FiveH for Ads</string>
    <string name="read_more_label">&#160;read more</string>
    <string name="read_less_label">&#160;&#160;read less</string>

</resources>
