<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/my_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_my_points"
            android:icon="@drawable/my_points_icon"
            android:title="@string/my_points" />

        <item
            android:id="@+id/nav_my_accounts"
            android:icon="@drawable/my_accounts_icon"
            android:title="@string/my_accounts" />

    </group>

    <item android:title="@string/app_preferences">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/app_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/about" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
