<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/debugtext"
        android:scaleType="centerCrop"
        android:src="@drawable/signup_p" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/signup_space"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/logo_t" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_type_radio_button"
                    android:textColor="@android:color/white" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_pirates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/advertiser_radio_button"
                    android:textColor="@android:color/white"
                    app:buttonTint="@android:color/holo_blue_bright" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_ninjas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_radio_button"
                    android:textColor="@android:color/white"
                    app:buttonTint="@android:color/holo_blue_bright" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_profile" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small.Inverse">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_space" />

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColorHint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_space" />

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password_et"
                android:textColorHint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_space" />


            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="@font/din_next_arabic_light_p30doenload_com"
                android:text="@string/create_account_btn"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:backgroundTint="@android:color/holo_green_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_space" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/din_next_arabic_light_p30doenload_com"
                android:gravity="center"
                android:text="@string/already_a_member_login_tv"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_space" />

            <include layout="@layout/providers_logins" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>